# generals-ai

./: .gitignore  AGENTS.md  curated-player-lists.txt  generals-ai.code-workspace  pyproject.toml  pyrightconfig.json  ruff.toml
docs/: assumptions-and-key-calcs-grab-bag.md  compute-considerations.md  deepnash-tpu-analysis.md  distance-features-design-space.md  game-mechanics-appendix-resolved-ambiguities.md  generals-io-api.md  generals-io-game-mechanics.md  links-and-references.md  network-architecture-design.md  observation-tensor-design.md  replay-format.md  replay-parser-design.md  replay-parser-status.md  star-decay-analysis.md
docs/2026-05/: 5.02-1-strakam-repo-survey.md  5.02-2-initial-project-planning-overview.md  5.02-3-initial-notes-and-decisions.md  5.02-4-initial-mvp-sketch.md  5.02-5-strakam-paper-summary.md  5.02-6-strakam-paper-takeaways.md  5.02-7-deepnash-summary-and-implications.md  5.02-8-ffa-strategic-intuitions-interview.md  5.03-1-openspiel-assessment.md  5.03-2-model-input-brainstorm.md  5.03-3-observation-tensor-design-part1.md  5.05-1-observation-tensor-design-part2.md  5.05-2-next-session-prompt.md  5.05-3-session-notes.md  5.06-1-session-notes.md  5.08-1-username-handling-design.md  5.11-1-session-notes.md  5.11-2-bundle-reading.md  5.11-3-session-handoff.md  5.12-1-next-session-prompt.md  5.13-1-parser-implementation-plan.md  5.13-2-parser-session-handoff.md  5.13-3-session-notes.md  5.13-4-prompt.md  5.13-4-sim-ranking-mismatch-solved.md  5.14-1-sim-perf-and-rust-port-plan.md  5.14-2-sim-rust-port-design.md  5.14-3-sim-rust-port-build-out.md  (+12 more)
replay-collector/: .gitignore  README.md  main.py  pyproject.toml
replay-collector/migrations/: 001_add_wire_data.py  002_rename_raw_deprecated.py  README.md
replay-collector/replay_collector/: __main__.py  client.py  collector.py  config.py  db.py  db_utils.py  fetcher.py  fill.py  generals_api.py  leaderboard.py  logging_setup.py  runner.py  sql_helpers.py  sweep.py  usernames.py  wire.py
replay-collector/replay_collector/cli/: _shared.py  collect_recent.py  fetch_gior.py  sweep_metadata.py
replay-collector/scripts/: analyze_sequence_patterns.py  analyze_stars_decay.py  analyze_turn_stats.py  backfill_wire_data.py  basic-replay-stats.sh  build_player_list.py  bundle_findings_sanity.py  check_users_exist.py  compare_player_lists.py  compute_persistence_score.py  fetch_season_leaderboards.py  filter_counts_report.py  investigate_zero_deltas.py  players_by_game_count.py  version-date-ranges.sh  winrate_star_buckets.py
replay-collector/tests/: test_cli_shared.py  test_sweep.py  test_sweep_metadata.py  test_usernames.py
replay-parser/: pyproject.toml
replay-parser/replay_parser/: _shared.py  combat.py  decode.py  driver.py  errors.py  git_state.py  invariants.py  metadata.py  moves.py  output.py  parser.py  rolling_stats.py  state.py  step.py  types.py  validator.py
replay-parser/replay_parser/_collector/: __init__.py  config.py  sql_helpers.py  wire.py
replay-parser/scripts/: _sweep_common.py  debug_rankings.py  find_fixture_candidates.py  find_lbsort_deploy_time.py  parity_sweep.py  run_corpus_driver.py  sample_output_sizes.py  sweep_invariants.py  sweep_match_rates.py
replay-parser/tests/: _fixture_lib.py  regen_fixtures.py  seed_fixtures.py  test_decode.py  test_output_smoke.py  test_sim_integration.py  test_smoke.py  test_state.py
replay-parser/tests/fixtures/2on1_general_a/: expected.npz
replay-parser/tests/fixtures/2on1_general_b/: expected.npz
replay-parser/tests/fixtures/3way_action_a/: expected.npz
replay-parser/tests/fixtures/3way_action_b/: expected.npz
replay-parser/tests/fixtures/capture_during_surrender_a/: expected.npz
replay-parser/tests/fixtures/capture_during_surrender_b/: expected.npz
replay-parser/tests/fixtures/city_battling_a/: expected.npz
replay-parser/tests/fixtures/city_battling_b/: expected.npz
replay-parser/tests/fixtures/multi_surrender_a/: expected.npz
replay-parser/tests/fixtures/multi_surrender_b/: expected.npz
replay-parser/tests/fixtures/run_of_the_mill_a/: expected.npz
replay-parser/tests/fixtures/run_of_the_mill_b/: expected.npz
replay-parser/tests/fixtures/samet_chain_a/: expected.npz
replay-parser/tests/fixtures/samet_chain_b/: expected.npz
replay-parser/tests/fixtures/short_game_a/: expected.npz
replay-parser/tests/fixtures/short_game_b/: expected.npz
replay-parser/tools/timestep_viewer/: constants.py  extract.py  render.py  template.html
rust-py-demo/: .gitignore  Cargo.toml  README.md  demo.py  pyproject.toml
rust-py-demo/python/rust_py_demo/: __init__.py  _native.pyi
rust-py-demo/src/: lib.rs
sim-core/: Cargo.toml  README.md  pyproject.toml
sim-core/python/sim_core/: __init__.py  _native.pyi
sim-core/src/: lib.rs  state.rs
tools/: docs_info.py
utils/: pyproject.toml
(+8 files in other folders)
