[project]
name = "generals-ai-workspace"
version = "0.0.0"
description = "generals-ai monorepo workspace root"
requires-python = ">=3.14"
dependencies = [
    "replay-collector",
    "replay-parser",
    "sim-core",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["replay-collector", "replay-parser", "sim-core"]

[tool.uv.sources]
replay-collector = { workspace = true }
replay-parser = { workspace = true }
sim-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
    "tabulate>=0.10.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff.lint]
select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"replay_collector".msg = "Import via replay_parser._collector.* instead of replay_collector directly"

[tool.ruff.lint.per-file-ignores]
"replay-parser/replay_parser/_collector/**/*.py" = ["TID251"]
"replay-collector/**/*.py" = ["TID251"]
