[project]
name = "generals-ai-workspace"
version = "0.0.0"
description = "generals-ai monorepo workspace root"
requires-python = ">=3.14"
dependencies = [
    "replay-collector",
    "replay-parser",
    "sim-core",
    "utils",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["replay-collector", "replay-parser", "sim-core", "utils"]

[tool.uv.sources]
replay-collector = { workspace = true }
replay-parser = { workspace = true }
sim-core = { workspace = true }
utils = { workspace = true }

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.14.0",
    "tabulate>=0.10.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["replay-parser/tests"]

# Ruff config lives in `ruff.toml`.
# Pyright config lives in `pyrightconfig.json`.
