[project]
name = "replay-parser"
version = "0.1.0"
description = "Replay parser + simulator for generals.io .gior replays"
requires-python = ">=3.11.2"
dependencies = [
    "replay-collector",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["replay_parser"]

[tool.uv.sources]
replay-collector = { workspace = true }
