[project]
name = "replay-parser"
version = "0.1.0"
description = "Replay parser + simulator for generals.io .gior replays"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "replay-collector",
    "sim-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["replay_parser"]

[tool.uv.sources]
replay-collector = { workspace = true }
sim-core = { workspace = true }
