[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rust-py-demo"
version = "0.1.0"
requires-python = ">=3.10"

[tool.maturin]
module-name = "rust_py_demo._native"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
